<resources>
    <string name="app_name">Software House</string>
    <string name="user_label">Username</string>
    <string name="password_label">Password</string>
    <string name="sign_in_label">Sign In</string>
    <string name="forgot_label">Forgot Password</string>
    <string name="login_facebook_label">Login Via Facebook</string>
    <string name="appointment_label"><u>No, thanks! Take me to My Appointment</u></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="doctors_label">Doctors in NY</string>
    <string name="find_doctor_label">Find specific doctor</string>
    <string name="sort_by_label">Sort by</string>
    <string name="appointment_title_label">Appointment</string>
    <string name="appointment_confirm_label">Appointment Confirm!</string>
    <string name="time_left_label">Time left before appointment</string>
    <string name="start_booking_label">Yes start Booking</string>
</resources>