<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_login_background"
    android:scrollbars="none"
    tools:context=".activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/size_logo"
            android:layout_height="@dimen/size_logo"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_default"
            android:src="@drawable/logo_maple"
            android:tint="@color/colorWhite" />

        <EditText
            android:id="@+id/edt_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginTop="@dimen/margin_default"
            android:drawableStart="@drawable/user_profile"
            android:drawablePadding="@dimen/margin_default"
            android:drawableTint="@color/colorWhite"
            android:hint="@string/user_label"
            android:singleLine="true"
            android:textColor="@color/colorWhite"
            android:theme="@style/AppTheme.LighterEditText" />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:drawableStart="@drawable/padlock"
            android:drawablePadding="@dimen/margin_default"
            android:drawableTint="@color/colorWhite"
            android:hint="@string/password_label"
            android:inputType="textPassword"
            android:textColor="@color/colorWhite"
            android:theme="@style/AppTheme.LighterEditText" />

        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/rounded_button_shape"
            android:text="@string/sign_in_label"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite" />

        <TextView
            android:id="@+id/txt_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_default"
            android:text="@string/forgot_label"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/btn_login_facebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/rounded_button_facebook"
            android:onClick="loginOnClickListener"
            android:text="@string/login_facebook_label"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite" />

        <TextView
            android:id="@+id/txt_account_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorWhite" />
    </LinearLayout>

</ScrollView>